cmake_minimum_required(VERSION 2.8.4)
project(glGraphics)

set(SOURCE_FILES main.cpp gpu_program.cpp debug.cpp static_mesh.cpp exs3d.cpp statistics.cpp demo_scene.cpp font_resource.cpp render_resources_impl.hpp render_resources.hpp frame_buffer.cpp binary_stream.cpp material.cpp water_plane.cpp 3rd-party/forsythtriangleorderoptimizer.cpp gpu_buffer.cpp camera.hpp camera.cpp texture.cpp resource_manager_impl.hpp resource.hpp resource_manager.hpp render_window.cpp mesh_renderable_object.cpp renderable.hpp fps_camera.cpp scene.cpp mesh_impl.hpp binary_stream_impl.hpp gpu_buffer_impl.hpp gpu_buffer.hpp math3D.hpp math_ex.hpp oo_extensions.hpp mesh.hpp)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" CMAKE_MODULE_PATH)
SET(CMAKE_CXX_FLAGS "-std=c++11")
find_package(Boost 1.5.0 COMPONENTS filesystem system REQUIRED)
find_package(OpenGL REQUIRED)
find_package(SOIL   REQUIRED)
find_package(GLEW   REQUIRED)
find_package(SFML 2 REQUIRED window system graphics)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(glGraphics ${SOURCE_FILES})
target_link_libraries(glGraphics ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARY} ${SFML_LIBRARIES} ${Boost_LIBRARIES} ${SOIL_LIBRARIES})
